# rust-find

./: Cargo.toml  README.md  build_and_test.zsh
docs/: IMPLEMENTATION_PLAN.md  development-plan.md  functional-modules.md  project-overview.md  technical-implementation.md
src/: cli.rs  errors.rs  find.rs  lib.rs  main.rs
src/finder/: filter.rs  mod.rs  options.rs  thread_pool.rs  walker.rs
tests/: integration_test.rs
