[package]
name = "rust-find"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = """
A high-performance, parallel implementation of the Linux find command in Rust.

Features:
- Multi-threaded directory traversal using Rayon
- Support for name pattern matching with glob
- Flexible filtering by file attributes
- Detailed error reporting
"""
license = "MIT"
repository = "https://github.com/yourusername/rust-find"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
walkdir = "2.3"
rayon = "1.10"
glob = "0.3"
num_cpus = "1.16"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
lazy_static = "1.4.0"